--- a/ExpenseManager/WebDelivery.csproj
+++ b/ExpenseManager/WebDelivery.csproj
@@ -224,6 +224,12 @@
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Interactions\Interactions.csproj">
+      <Project>{1403d55d-0b4d-4d0a-b522-83ba5f3a4684}</Project>
+      <Name>Interactions</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
