--- a/RAMRepository/RAMRepositories.csproj
+++ b/RAMRepository/RAMRepositories.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1403D55D-0B4D-4D0A-B522-83BA5F3A4684}</ProjectGuid>
+    <ProjectGuid>{6DCF520C-6D0A-4853-8897-6C0AFD616888}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Interactions</RootNamespace>
-    <AssemblyName>Interactions</AssemblyName>
+    <RootNamespace>RAMRepository</RootNamespace>
+    <AssemblyName>RAMRepository</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,12 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AbstractInteraction.cs" />
-    <Compile Include="AddCategoryInteraction.cs" />
+    <Compile Include="CategoryRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RequestModels\AddCategory.cs" />
-    <Compile Include="ResponseModels\DefaultResponse.cs" />
-    <Compile Include="ResponseModels\Error.cs" />
+    <Compile Include="RAMRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Entities\Entities.csproj">
