--- a/Repositories/Repositories.csproj
+++ b/Repositories/Repositories.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1403D55D-0B4D-4D0A-B522-83BA5F3A4684}</ProjectGuid>
+    <ProjectGuid>{1C1BA28F-FF37-43E6-B8F7-3423E86DD641}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Interactions</RootNamespace>
-    <AssemblyName>Interactions</AssemblyName>
+    <RootNamespace>Repositories</RootNamespace>
+    <AssemblyName>Repositories</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,21 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AbstractInteraction.cs" />
-    <Compile Include="AddCategoryInteraction.cs" />
+    <Compile Include="Exceptions\CategoryAlreadyExistsException.cs" />
+    <Compile Include="ICategoryRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RequestModels\AddCategory.cs" />
-    <Compile Include="ResponseModels\DefaultResponse.cs" />
-    <Compile Include="ResponseModels\Error.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Entities\Entities.csproj">
       <Project>{cb803d13-0021-4891-bf35-46227337e472}</Project>
       <Name>Entities</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Repositories\Repositories.csproj">
-      <Project>{1c1ba28f-ff37-43e6-b8f7-3423e86dd641}</Project>
-      <Name>Repositories</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
