--- a/ExpenseManager.Tests/ExpenseManager.Tests.csproj
+++ b/ExpenseManager.Tests/ExpenseManager.Tests.csproj
@@ -99,6 +99,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WhenRegisteringCategory.cs" />
+    <Compile Include="WhenRegisteringExpense.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
