--- a/ExpenseManager.Tests/ExpenseManager.Tests.csproj
+++ b/ExpenseManager.Tests/ExpenseManager.Tests.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WhenRegisteringCategory.cs" />
     <Compile Include="WhenRegisteringExpense.cs" />
+    <Compile Include="WhenSummarazingExpensesByCategory.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
