--- a/Interactions/Interactions.csproj
+++ b/Interactions/Interactions.csproj
@@ -45,9 +45,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestModels\AddCategory.cs" />
     <Compile Include="RequestModels\AddExpense.cs" />
+    <Compile Include="RequestModels\SummarizeExpenses.cs" />
     <Compile Include="ResponseModels\DefaultResponse.cs" />
     <Compile Include="ResponseModels\Error.cs" />
+    <Compile Include="ResponseModels\ExpensesSummaryResponse.cs" />
     <Compile Include="ResponseModels\IDResponse.cs" />
+    <Compile Include="SummarizeExpensesInteraction.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Entities\Entities.csproj">
