--- a/ExpenseManager.Tests/ExpenseManager.Tests.csproj
+++ b/ExpenseManager.Tests/ExpenseManager.Tests.csproj
@@ -98,6 +98,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WhenListingExpenses.cs" />
     <Compile Include="WhenRegisteringCategory.cs" />
     <Compile Include="WhenRegisteringExpense.cs" />
     <Compile Include="WhenSummarazingExpensesByCategory.cs" />
