--- a/Interactions/Interactions.csproj
+++ b/Interactions/Interactions.csproj
@@ -42,12 +42,16 @@
     <Compile Include="AbstractInteraction.cs" />
     <Compile Include="AddCategoryInteraction.cs" />
     <Compile Include="AddExpenseInteraction.cs" />
+    <Compile Include="ListExpensesInteraction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestModels\AddCategory.cs" />
     <Compile Include="RequestModels\AddExpense.cs" />
+    <Compile Include="RequestModels\ListExpenses.cs" />
     <Compile Include="RequestModels\SummarizeExpenses.cs" />
     <Compile Include="ResponseModels\DefaultResponse.cs" />
     <Compile Include="ResponseModels\Error.cs" />
+    <Compile Include="ResponseModels\ExpenseListResponse.cs" />
+    <Compile Include="ResponseModels\ExpenseResponse.cs" />
     <Compile Include="ResponseModels\ExpensesSummaryResponse.cs" />
     <Compile Include="ResponseModels\IDResponse.cs" />
     <Compile Include="SummarizeExpensesInteraction.cs" />
