--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\EFRepositories\packages.config" />
   <repository path="..\ExpenseManager.Tests\packages.config" />
   <repository path="..\ExpenseManager\packages.config" />
 </repositories>
