Add ordered tests

--- a/ExpenseManager.Tests/ExpenseManager.Tests.csproj
+++ b/ExpenseManager.Tests/ExpenseManager.Tests.csproj
@@ -107,6 +107,18 @@
     <Content Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="AddCategory.orderedtest">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="AddExpense.orderedtest">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="ListExpenses.orderedtest">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="SummarizeExpenses.orderedtest">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
