Adds EFRepositories.ExpenseRepository, ListCategoriesInteraction, Add Expense web feature

--- a/EFRepositories/EFRepositories.csproj
+++ b/EFRepositories/EFRepositories.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="CategoryRepository.cs" />
     <Compile Include="DBContexts.cs" />
+    <Compile Include="ExpenseRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
