--- a/EFRepositories/App.config
+++ b/EFRepositories/App.config
@@ -7,7 +7,7 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="v11.0" />
+        <parameter value="ProjectsV12" />
       </parameters>
     </defaultConnectionFactory>
     <providers>
